Fix overflow and remove unneded styles

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -39,39 +39,3 @@
   overflow: unset !important;
   z-index: 1000;
 }
-
-// Hero animation
-
-@keyframes heroFadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    background-color: red;
-    opacity: 1;
-  }
-}
-
-.animatedHero {
-  animation-name: heroFadeIn;
-  animation-timing-function: ease-in-out;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-  animation-duration: 4s;
-}
-
-.animatedHero-4 {
-  animation-delay: 0s;
-}
-.animatedHero-3 {
-  animation-delay: 4s;
-}
-.animatedHero-2 {
-  animation-delay: 8s;
-}
-.animatedHero-1 {
-  animation-delay: 12s;
-}
-.animatedHero-0 {
-  animation-delay: 16s;
-}
